--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -150,6 +150,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Assign function as variable & **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run(f, x, y):\n",
+    "    f(x, y)\n",
+    "    \n",
+    "def add_numbers(x,y):\n",
+    "    return x + y\n",
+    "\n",
+    "a = add_numbers\n",
+    "print(run(a, x = 1, y = 2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
