--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -153,17 +153,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Assign function as variable & **"
+    "**Assign function as variable & function as param**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "def run(f, x, y):\n",
-    "    f(x, y)\n",
+    "    return f(x, y)\n",
     "    \n",
     "def add_numbers(x,y):\n",
     "    return x + y\n",
